# external-widget.nvim

./: .gitignore  Cargo.toml  README.md  justfile
crates/core/: Cargo.toml
crates/core/src/: color.rs  env.rs  font.rs  image.rs  lib.rs  nvim.rs  term.rs  tmux.rs
crates/core/src/graphics/: measure_ctx.rs  mod.rs  render_ctx.rs  widget.rs  widget_tree.rs
crates/core/src/kitty/: mod.rs
crates/core/src/kitty/actions/: animate.rs  delete.rs  mod.rs  put.rs  transmission.rs
crates/core/src/nvim/: hl.rs  mod.rs
crates/core/src/pango/: markup.rs  mod.rs
crates/core/src/treesitter/: mod.rs  parser.rs
crates/ext-widget-bin/: Cargo.toml
crates/ext-widget-bin/src/: main.rs
crates/ext-widget-core/: Cargo.toml
crates/ext-widget-core/src/: env.rs  lib.rs  logger.rs  tmux.rs
crates/ext-widget-core/src/nvim/: config.rs  handler.rs  highlight.rs  mod.rs  rtp.rs  session.rs  treesitter.rs
crates/ext-widget-core/src/nvim/handlers/: config.rs  hover.rs  mod.rs  notify.rs
crates/ext-widget-core/src/nvim/handlers/notify/: notification.rs  notify.rs
crates/ext-widget-core/src/painting/: color.rs  mod.rs  renderer.rs
crates/ext-widget-core/src/painting/support/: decoration.rs  flexible_length.rs  flexible_length_auto.rs  layout.rs  mod.rs  style.rs
crates/ext-widget-core/src/term/: mod.rs  size.rs  writer.rs
crates/ext-widget-core/src/term/kitty/: image.rs  mod.rs
crates/ext-widget-core/src/term/kitty/proto/: common.rs  mod.rs
crates/ext-widget-core/src/term/kitty/proto/actions/: animate.rs
crates/ext-widget-core/src/term/proto/: action.rs  mod.rs
crates/ext-widget-core/src/term/proto/actions/: delete.rs  mod.rs  put.rs  transmission.rs
crates/ext-widget-core/src/test_utils/: mod.rs  nvim.rs
crates/ext-widget-core/src/widgets/: mod.rs
crates/ext-widget-core/src/widgets/builtin/: column.rs  container.rs  mod.rs  rich_text.rs  row.rs  stateless_widget.rs
crates/ext-widget-core/src/widgets/others/: mod.rs
crates/ext-widget-core/src/widgets/others/markdown/: codeblock.rs  converter.rs  markdown_document.rs  mod.rs  style_stack.rs
crates/ext-widget-core/src/widgets/support/: layout.rs  mod.rs  style.rs
crates/ext-widget-core/src/widgets/widget/: build_context.rs  mod.rs  options.rs  traits.rs  traits_ext.rs  tree.rs
crates/ext-widget-lib/: Cargo.toml
crates/ext-widget-lib/src/: lib.rs  nvim_bridge.rs
crates/tests/: Cargo.toml
crates/tests/src/nvim/: mod.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: lib.rs  widget.rs  widget_tree.rs
crates/widgets/src/support/: box_constraints.rs  box_decoration.rs  mod.rs
crates/widgets/src/widgets/: bar.rs  column.rs  container.rs  markup.rs  md_doc.rs  mod.rs  row.rs
crates/widgets/src/widgets/md_doc/: codeblock.rs  converter.rs  md_doc.rs  mod.rs
crates/widgets/src/widgets/text/: mod.rs  text_span.rs
lua/external-widget/: config.lua  hover.lua  init.lua  notify.lua  rpc.lua  utils.lua
tests/: Cargo.toml
tests/src/nvim/: mod.rs
