[workspace]
resolver = "2"
members = [
  "crates/bin",
  "crates/core",
  "crates/widgets"
]

[workspace.dependencies]
nvim-rs = { version = "0.6.0", features = ["use_tokio"] }
async-trait = "0.1.74"
tokio = { version = "1.35.0" }
tokio-util = { version = "0.7.10", features = ["compat"] }
rmpv = "1.0.1"
cosmic-text = "0.10.0"

