[package]
name = "external-widget-core"
version = "0.1.0"
edition = "2021"

[dependencies]
nvim-rs = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
rmpv = { workspace = true }
anyhow = { workspace = true }
pango = { workspace = true }
cairo-rs = { workspace = true }
pangocairo = { workspace = true }
taffy = { workspace = true }

serde = { version = "1.0.193", features = ["derive"] }
rmp-serde = "1.1.2"
futures = "0.3.29"
