[package]
name = "external-widget-core"
version = "0.1.0"
edition = "2021"

[dependencies]
nvim-rs = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
rmpv = { workspace = true }
anyhow = { workspace = true }
pango = { workspace = true }
cairo-rs = { workspace = true }
pangocairo = { workspace = true }
taffy = { workspace = true }
tree-sitter = { workspace = true }
libloading = { workspace = true }
serde = { workspace = true }

rmp-serde = "1.1.2"
futures = "0.3.29"
base64 = { version = "0.21.5" }
once_cell = "1.19.0"
regex = "1"
term_size = "0.3.2"
parking_lot = "0.12.1"
