[package]
name = "ext-widget-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
nvim-rs = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

taffy = { git = "https://github.com/DioxusLabs/taffy", rev = "440843c700455363383e0a4fc365a15deebd4717", features = [
  "serde",
] }
thiserror = "1.0.51"
skia-safe = { version = "0.69.0", features = [
  "binary-cache",
  "embed-icudtl",
  "textlayout",
] }
base64 = "0.21.5"
comrak = "0.20.0"
once_cell = "1.19.0"
libloading = "0.8.1"
parking_lot = "0.12.1"
tree-sitter = "0.20.10"
regex = "1.10.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tracing-log = "0.2.0"
rmpv = { version = "1.0.1", features = ["with-serde"] }
futures = "0.3.29"
async-recursion = "1.0.5"

[dev-dependencies]
all_asserts = "2.3.1"
