[package]
name = "external-widget-widgets"
version = "0.1.0"
edition = "2021"

[dependencies]
external-widget-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
pango = { workspace = true }
cairo-rs = { workspace = true }
pangocairo = { workspace = true }
tree-sitter = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

taffy = { git = "https://github.com/DioxusLabs/taffy", rev = "440843c700455363383e0a4fc365a15deebd4717" }
comrak = "0.20.0"
image = "0.24.7"
glib = "0.18.4"
